7903181: port jextract for foreign-preview changes
Reviewed-by: mcimadamore