@@ -22,7 +22,7 @@ if (clang_versions.length == 0) {
 }
 def clang_version = clang_versions[0]
 
-def jextract_version = "18"
+def jextract_version = "19"
 def jmods_dir = "$buildDir/jmods"
 def jextract_jmod_file = "$jmods_dir/jextract.jmod"
 def jextract_jmod_libs_dir = "$buildDir/jextract_jmod_libs"
@@ -40,11 +40,10 @@ repositories {
 }
 
 compileJava {
-    options.release = 18
-    options.compilerArgs << "--add-modules=jdk.incubator.foreign"
-    options.compilerArgs << "-Xlint:all"
+    options.release = 19
+    options.compilerArgs << "--enable-preview"
     options.fork = true
-    options.forkOptions.executable = "${jdk18_home}/bin/javac"
+    options.forkOptions.executable = "${jdk19_home}/bin/javac"
 }
 
 jar {
@@ -84,7 +83,7 @@ task createJextractJmod(type: Exec) {
         delete(jextract_jmod_file)
     }
 
-    executable = "${jdk18_home}/bin/jmod"
+    executable = "${jdk19_home}/bin/jmod"
     args = [
           "create",
           "--module-version=$jextract_version",
@@ -103,17 +102,17 @@ task createJextractImage(type: Exec) {
     outputs.dir(jextract_app_dir)
 
     def quote_jlink_opts = Os.isFamily(Os.FAMILY_WINDOWS)?
-        '\\"--enable-native-access=org.openjdk.jextract\\"' :
-        '"--enable-native-access=org.openjdk.jextract"'
+        '\\"--enable-native-access=org.openjdk.jextract\\" \\"--enable-preview\""' :
+        '"--enable-native-access=org.openjdk.jextract" "--enable-preview"'
 
     doFirst {
         delete(jextract_app_dir)
     }
 
-    executable = "${jdk18_home}/bin/jlink"
+    executable = "${jdk19_home}/bin/jlink"
     args = [
          "--module-path=$jmods_dir",
-         "--add-modules=org.openjdk.jextract,jdk.compiler",
+         "--add-modules=org.openjdk.jextract,jdk.compiler,jdk.zipfs",
          "--output=${jextract_app_dir}",
          "--launcher=jextract=org.openjdk.jextract/org.openjdk.jextract.JextractTool",
          "--add-options",
@@ -146,9 +145,9 @@ task createRuntimeImageForTest(type: Exec) {
         delete(out_dir)
     }
 
-    executable = "${jdk18_home}/bin/jlink"
+    executable = "${jdk19_home}/bin/jlink"
     args = [
-         "--module-path=$jmods_dir" + File.pathSeparator + "$jdk18_home/jmods",
+         "--module-path=$jmods_dir" + File.pathSeparator + "$jdk19_home/jmods",
          "--add-modules=ALL-MODULE-PATH",
          "--output=$out_dir",
     ]
@@ -193,6 +192,7 @@ task jtreg(type: JavaExec) {
     args = [
             "-jdk", "$buildDir/jextract-jdk-test-image",
             "-nativepath:$buildDir/testlib-install/${os_lib_dir}",
+            "-javaoption:--enable-preview",
             "-javaoption:--enable-native-access=org.openjdk.jextract,ALL-UNNAMED",
             "-avm", "-conc:auto", "-verbose:summary",
             "../test"
