@@ -5,15 +5,11 @@ param(
   [string]$mingwBinPath
 )
 
-. ../shared_windows.ps1
-
-$java = find-tool("java")
-
 $Env:path+="`;$blasPath\bin" # libblas.dll
 $Env:path+="`;$mingwBinPath" # mingw runtime dlls
 
-& $java `
+java `
   --enable-native-access=ALL-UNNAMED `
-  --add-modules jdk.incubator.foreign `
+  --enable-preview --source=19 `
   -D"java.library.path=$blasPath\bin" `
   TestBlas.java `
