@@ -1,3 +1,3 @@
 java --enable-native-access=ALL-UNNAMED \
-   --add-modules jdk.incubator.foreign \
-   -Djava.library.path=/usr/local/Cellar/ffmpeg/4.4.1_3/lib LibffmpegMain.java $*
+   --enable-preview --source=19 \
+   -Djava.library.path=/usr/local/Cellar/ffmpeg@4/4.4.2/lib LibffmpegMain.java $*
