@@ -1,3 +1,4 @@
-java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign \
+java --enable-native-access=ALL-UNNAMED \
+    --enable-preview --source=19 \
     -Djava.library.path=${LIBGIT2_HOME}/build/ \
     GitClone.java $*
