@@ -1,4 +1,4 @@
 java --enable-native-access=ALL-UNNAMED \
-   --add-modules jdk.incubator.foreign \
+   --source=19 --enable-preview \
    -Djava.library.path=/usr/local/Cellar/lp_solve/5.5.2.11/lib \
     LpSolveDemo.java
