@@ -2,4 +2,4 @@ jextract --source -t opengl -lGL -l/System/Library/Frameworks/GLUT.framework/Ver
   -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/ \
   /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/System/Library/Frameworks/GLUT.framework/Headers/glut.h
 
-javac --add-modules jdk.incubator.foreign opengl/*.java
+javac --enable-preview --source=19 opengl/*.java
