@@ -1,3 +1,5 @@
 
-java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=/usr/local/opt/readline/lib/ Readline.java
+java --enable-native-access=ALL-UNNAMED \
+    --enable-preview --source=19 \
+    -Djava.library.path=/usr/local/opt/readline/lib/ Readline.java
 
