@@ -3,4 +3,4 @@ jextract --source \
   /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sqlite3.h \
   -t org.sqlite -lsqlite3
 
-javac --add-modules jdk.incubator.foreign org/sqlite/*.java
+javac --enable-preview --source=19 org/sqlite/*.java
