@@ -1,2 +1,3 @@
-java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign \
+java --enable-native-access=ALL-UNNAMED \
+   --enable-preview --source=19 \
    TensorflowLoadSavedModel.java saved_mnist_model
