@@ -2,4 +2,4 @@ jextract --source -t org.unix \
   -I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include \
    /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/time.h
 
-javac --add-modules jdk.incubator.foreign org/unix/*.java
+javac --enable-preview --source=19 org/unix/*.java
